[package]
edition = "2021"
authors = ["Kentaro Okuda <kentaro.okuda@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with MAX6955 LED Display Driver"
documentation = "https://docs.rs/max6955"
readme = "README.md"
keywords = ["embedded-hal-driver", "led-driver",]
license = "MIT"
name = "max6955"
repository = "https://github.com/lonesometraveler/max6955"
version = "0.1.3"

[features]
default = ["eh-a"]
eh-02 = ["embedded-hal-02"]
eh-1 = ["embedded-hal-1"]
eh-a = ["embedded-hal-async"]

[dependencies]
embedded-hal-02 = { package = "embedded-hal", version = "0.2.0", optional = true }
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.9", optional = true }
embedded-hal-async = { version = "0.1.0-alpha.3", optional = true }
bit_field     = "0.10.0"
